--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -132,7 +132,7 @@ In this paper, we propose leveraging the tools of optimization to solve \eqref{j
 
 In simulation studies we show that our descent-based optimization produces solutions with the same validation error as those from grid search. In addition, we find that our approach is highly efficient and can solve regressions with hundreds of penalty parameters. Finally, we use this method to analyze regularization methods that were previously computationally intractable. Through this, we discover that a variant of sparse group lasso with many more penalty parameters can significantly decrease error and produce more meaningful models.
 
-\citet{lorbert2010descent} presented some related work on this topic. They solved linear regression problems by updating regression coefficients and regularization parameters using cyclical coordinate gradient descent. We take a more general approach that allows us to apply this descent-based optimization to a wide array of problems. In particular this paper focuses on three examples that demonstrate the wide applicability of our method: elastic net, sparse group lasso, and additive partial linear models.
+\citet{lorbert2010descent} presented some related work on this topic. They solved linear regression problems by updating regression coefficients and regularization parameters using cyclical coordinate gradient descent. We take a more general approach that allows us to apply this descent-based optimization to a wide array of problems. In particular this paper focuses on three examples that demonstrate the wide applicability of our method: elastic net, sparse group lasso, and additive partially linear models.
 
 In Section 2, we describe descent-based optimization in detail and present an algorithm for solving it in example regressions. In Section 3, we show that our method achieves validation errors as low as those achieved by grid search. In Section 4, we explore variants of the example regression problems that have many more regularization parameters and demonstrate that solving \eqref{jointopt} is still computationally tractable. Finally, we present results on data predicting colitis status from gene expression in Section 5.
 
@@ -432,7 +432,7 @@ Note that because the differentiable space is a local optimality space and is th
 
 \subsection{Examples}
 
-To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider the elastic net, sparse group lasso, and the generalized lasso, where the training criterions are nonsmooth, but $\hat{\theta}(\boldsymbol\lambda)$ is smooth almost everywhere. Finally, we discuss doing descent-based joint optimization for an additive partial linear model, an example of a semi-parametric regression.
+To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider the elastic net, sparse group lasso, and the generalized lasso, where the training criterions are nonsmooth, but $\hat{\theta}(\boldsymbol\lambda)$ is smooth almost everywhere. Finally, we discuss doing descent-based joint optimization for an additive partially linear model, an example of a semi-parametric regression.
 
 In all of these problems, for almost every $\boldsymbol{\lambda}$, the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ exists, and is also a local optimality space. For reference, the differentiable space for each regression example is specified in Table~\ref{table:differentiableSpace}. For ease of notation, we will let $S_{\boldsymbol{\lambda}}$ denote the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ at $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$.
 
@@ -477,7 +477,7 @@ Sparse Group Lasso & $span(\{e_i | \hat{\theta}_i\left(\boldsymbol{\lambda}\righ
 \hline
 Generalized Lasso & $\mathcal{N}(I_{I(\lambda)} D)$ where $I(\lambda) = \{ i | (D \hat{\boldsymbol{\theta}}(\lambda))^\top e_i = 0 \}$ \\
 \hline
-Additive Partial Linear Model & $span(\{e_i | \hat{\beta}_i\left(\boldsymbol{\lambda}\right) \ne 0 \} \})  \oplus  \mathbb{R}^{n}$\\
+Additive Partially Linear Model & $span(\{e_i | \hat{\beta}_i\left(\boldsymbol{\lambda}\right) \ne 0 \} \})  \oplus  \mathbb{R}^{n}$\\
 \hline
 \end{tabular}
 \end{center}
@@ -515,7 +515,7 @@ Additive Partial Linear Model & $span(\{e_i | \hat{\beta}_i\left(\boldsymbol{\la
 
 
 
-\subsubsection{Elastic Net}
+\subsubsection{Elastic Net}\label{sec:enet}
 
 The elastic net \citep{zou2003regression}, a linear combination of the lasso and ridge penalties, is an example of a regularization method that is not smooth. We are interested in choosing regularization parameters $\boldsymbol{\lambda} = (\lambda_1, \lambda_2)^\top$ using the following joint optimization problem:
 
@@ -592,6 +592,8 @@ sgn(\hat{\boldsymbol{\beta}} (\boldsymbol{\lambda})) & \hat{\boldsymbol{\beta}} 
 
 \subsubsection{Sparse Group Lasso}
 
+\textcolor{red}{Perhaps we should just write this problem (and PLAM) with a tiny additional ridge penalty? That will also give us uniqueness of the solution, which would be nice =]}
+
 The sparse group lasso combines the $\|\cdot\|_2$ and $\|\cdot\|_1$ penalties, both of which are not smooth \citep{simon2013sparse}. This method is particularly well suited to problems where features have a natural grouping, and only a few of the features from a few of the groups are thought to have an effect on response (eg. genes in gene pathways).
 
 The problem setup is as follows. Given $M$ covariate groups, suppose $\boldsymbol{X}$ and $\boldsymbol \theta$ are partitioned into $\boldsymbol{X}^{(m)}$ and $\boldsymbol \theta^{(m)}$ for groups $m = 1, ... , M$. We are interested in finding the optimal regularization parameters $\boldsymbol{\lambda} = (\lambda_1, \lambda_2)^\top$. The joint optimization problem is formulated as follows.
@@ -612,7 +614,7 @@ S_{\boldsymbol \lambda} = span(\boldsymbol I_{I(\boldsymbol\lambda)})
 \end{equation}
 where $I(\boldsymbol\lambda) = \{i | \hat{\boldsymbol{\theta}}_i(\boldsymbol\lambda) \ne 0\}$ are the nonzero indices of $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$. 
 
-This problem satisfies the first two conditions in Theorem \ref{thethrm}. The third condition requires that the Hessian matrix is invertible. It is not guaranteed to hold. However, one can easily add a ridge penalty with a large enough coefficient for the Hessian matrix to be invertible.
+This problem satisfies the first two conditions in Theorem \ref{thethrm}. The third condition requires that the Hessian matrix is invertible. It is not guaranteed to hold. However, if one adds a small ridge penalty then Hessian matrix is invertible.
 
 \begin{itemize}
 \item[] Condition 3: The Hessian matrix of $L_T(\cdot, \boldsymbol{\lambda})$ with respect to the columns of $I_{I(\boldsymbol \lambda)}$ is
@@ -640,7 +642,7 @@ To calculate the gradient, we define the locally equivalent joint optimization p
 \end{array}
 \end{equation}
 
-Since the training criterion is smooth, the gradient and set it to zero:
+Since the training criterion is now smooth, we can take the gradient and set it to zero:
 \begin{equation}
 -\frac{1}{n} \boldsymbol{X}_{T, I(\boldsymbol\lambda)}^\top(\boldsymbol{y}_T - \boldsymbol{X}_{T, I(\boldsymbol\lambda)} \hat{\boldsymbol\beta}(\boldsymbol \lambda))
 + \lambda_1
@@ -649,7 +651,7 @@ Since the training criterion is smooth, the gradient and set it to zero:
 ...\\
 \frac{\hat{\boldsymbol\beta}^{(M)}(\boldsymbol \lambda)}{||\hat{\boldsymbol{\beta}}^{(M)} (\boldsymbol \lambda)||_2}
 \end{bmatrix}
-+ \lambda_2 sgn(\hat{\boldsymbol\beta}(\boldsymbol \lambda)) =0
++ \lambda_2 sgn(\hat{\boldsymbol\beta}(\boldsymbol \lambda)) =0.
 \end{equation}
 
 From \eqref{implicitDifferentiation} and the chain rule, we get that the gradient of the validation loss is:
@@ -685,7 +687,7 @@ sgn(\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}))
 
 
 \subsection{Generalized Lasso}
-The generalized lasso \citep{roth2004generalized} penalizes the $\ell_1$ norm of the coefficients $\boldsymbol \theta$ weighted by some matrix $D$. Depending on the choice of $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing.
+The generalized lasso \citep{roth2004generalized} penalizes the $\ell_1$ norm of the coefficients $\boldsymbol \theta$ weighted by some matrix $D$. Depending on the choice of $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing \textcolor{red}{(CITE)}.
 
 To tune the regularization parameter $\lambda$, we formulate the generalized lasso as a joint optimization problem:
 
@@ -701,23 +703,23 @@ To tune the regularization parameter $\lambda$, we formulate the generalized las
 \label{genlasso}
 \end{equation}
 
-Let the indices of the zero elements of $D \hat{\boldsymbol{\theta}}(\lambda)$ be denoted $I(\lambda) = \left \{i | (D \hat{\boldsymbol{\theta}}(\lambda))^\top e_i = 0 \right \}$.
-Let $I_{I(\lambda)}$ be the submatrix of the $p \times p$ identity matrix consisting of columns with indices $I(\lambda)$. Since $\|D \boldsymbol{\theta}\|_1$ is differentiable only along directions where the zero elements of $D \boldsymbol{\theta}$ are kept constant, the differentiable space $S_\lambda$ is the null space of $I_{I(\lambda)}^\top D$:
+Let $I(\lambda)$ denote the indices of the zero elements of $D \hat{\boldsymbol{\theta}}(\lambda)$, ie $I(\lambda) = \left \{i | (D \hat{\boldsymbol{\theta}}(\lambda))_i = 0 \right \}$.
+Let $I_{I(\lambda)}$ be the submatrix of the $p \times p$ identity matrix consisting of columns with indices $I(\lambda)$. Since $\|D \boldsymbol{\theta}\|_1$ is differentiable in $\theta$ only along directions where the current zero elements of $D \boldsymbol{\theta}$ remain zero, the differentiable space $S_\lambda$ is the null space of $I_{I(\lambda)}^\top D$:
 \begin{equation}
 S_\lambda = \mathcal{N}(I_{I(\lambda)}^\top D)
 \end{equation}
-Let $U_\lambda$ be the matrix decomposition of the projection matrix onto $\mathcal{N}(I_{I(\lambda)}^\top D)$:
+Let $U_\lambda$ be an orthonormal basis for $\mathcal{N}(I_{I(\lambda)}^\top D)$. Note
 \begin{equation}
-I - D^\top I_{I(\lambda)} \left ( D^\top D\right )^{-1} I_{I(\lambda)}^\top D = U_\lambda U_\lambda^\top
+I - D^\top I_{I(\lambda)} \left ( D^\top D\right )^{-1} I_{I(\lambda)}^\top D = U_\lambda U_\lambda^\top.
 \end{equation}
 
-The first two conditions in Theorem 1 are satisfied by the same reasoning before. For the third condition, we need to check that the Hessian matrix is invertible.
+The first two conditions in Theorem 1 \textcolor{red}{You should always use a label/ref combo to reference theorems and algorithms} are satisfied by similar reasoning to that discussed in Section~\ref{sec:net}. For the third condition, we need to check that the Hessian matrix is invertible.
 \begin{itemize}
 \item[] Condition 3: The Hessian matrix of $L_T(\cdot, \boldsymbol{\lambda})$ with respect to $U_\lambda$ is
 \begin{equation}
 U_\lambda^\top X_T^\top X_T U_\lambda
 \end{equation}
-In settings with enough data, the Hessian will be nonsingular in practice. In a high-dimensional, low data setting ($p \gg n$), the Hessian may not be. This can be avoided by simply adding a ridge penalty with a small regularization parameter. Therefore we can presume that Condition 3 is satisfied.
+In settings with enough data, the Hessian will be nonsingular in practice. In a high-dimensional, low data setting ($p \gg n$), the Hessian may not be. This can be avoided by simply adding a ridge penalty with a small regularization parameter. Therefore we can presume that Condition 3 is satisfied. \textcolor{red}{our life may be easier if we just add a tiny bit of ridge to everything to being with}
 \end{itemize}
 
 Now we show the gradient calculations. Following Algorithm 2, we first define the locally equivalent joint optimization problem:
@@ -758,17 +760,19 @@ Plugging in \eqref{genlassoParamDeriv} to the chain rule gives us the gradient o
 \right )
 \end{equation}
 
-\subsubsection{Additive Partial Linear Models}
+\subsubsection{Additive Partially Linear Models}
 
-Finally, we present an example from semi-parametric regression: an additive partial linear model (APLM) with Hodrick-Prescott (H-P) filtering for unevenly-spaced inputs and the lasso penalty. In APLMs, the response is modeled as the sum of nonlinear and linear functions.  The combination of H-P filtering and lasso favors model fits with smooth nonparametric estimates and sparse linear effects.
+Finally, we present an example from semi-parametric regression: an additive partially linear model (APLM) with Hodrick-Prescott (H-P) filtering for unevenly-spaced inputs and the lasso penalty. In APLMs, the response is modeled as the sum of nonlinear and linear functions.  The combination of H-P filtering and lasso favors model fits with smooth nonparametric estimates and sparse linear effects.
 
-The setup for this semi-parametric problem is slightly different. Let $\boldsymbol{X} \in \mathbb{R}^{n \times p}$ be the design matrix with $p$ linear predictors, $\boldsymbol{z} \in \mathbb{R}^n$ be the design matrix with the nonlinear predictor, and $\boldsymbol{y} \in \mathbb{R}^n$ be the response variable. We assume that the observations are ordered by increasing $z_i$. Let $\boldsymbol{I}_T$ be a $n \times n$ diagonal matrix with elements 1 or 0. $\boldsymbol{I}_T$ partitions the data into the training set $\boldsymbol{X}_T= \boldsymbol{I}_T \boldsymbol{X}$ and the validation set $\boldsymbol{X}_V= (\boldsymbol{I} - \boldsymbol{I}_T) \boldsymbol{X}$.
-
-The response $y$ in this APLM is modeled as the sum of $x \mapsto \boldsymbol \beta^\top x $ and $g: \mathbb{R} \mapsto \mathbb{R}$, where $\boldsymbol \beta$ and $g$ are unknown:
+In this example we assume that on each of $i=1,\ldots n$ observations we have measured a response $y_i$, a vector of ``linearly modeled features'' $\boldsymbol{x}_i$, and a single ``continuously modeled feature'' $z_i$. We believe that $y$ can be modeled as an additive combination of these features:
 \begin{equation}
-y_i = \boldsymbol{x_i}^\top \boldsymbol{\beta} + g(z_i) + \epsilon
+y_i = \boldsymbol{x_i}^\top \boldsymbol{\beta} + g(z_i) + \epsilon_i
 \end{equation}
-We want to find the coefficients $\boldsymbol{\beta}$ and estimates $\boldsymbol{\theta} = (\theta_1, ..., \theta_n)$ for $(g(z_1), ..., g(z_n))^\top$ that minimize the squared error. Since the fitted values $\boldsymbol{\beta}$ and $\boldsymbol{\theta}$ depend on the regularization parameters, we are ultimately interested in $\boldsymbol\lambda = (\lambda_1, \lambda_2)^\top$. The joint optimization problem is defined as follows:
+We want to estimate the coefficients $\boldsymbol{\beta}$ and values of the function $g$ at our observations: $\boldsymbol{\theta} = (\theta_1, ..., \theta_n) \equiv (g(z_1), ..., g(z_n))$.
+
+To formalize our optimization problem we give a bit of notation. Let $\boldsymbol{X} \in \mathbb{R}^{n \times p}$ be the design matrix of the $p$ linear predictors, $\boldsymbol{z} \in \mathbb{R}^n$ be the design vector for the nonlinear predictor, and $\boldsymbol{y} \in \mathbb{R}^n$ be the vector of responses. We assume that the observations are ordered such that $z_1 < z_2 < \cdots < z_n$. Let $\boldsymbol{I}_T$ be a $n \times n$ diagonal matrix with elements 1 or 0. $\boldsymbol{I}_T$ partitions the data into the training set $\boldsymbol{X}_T= \boldsymbol{I}_T \boldsymbol{X}$ and the validation set $\boldsymbol{X}_V= (\boldsymbol{I} - \boldsymbol{I}_T) \boldsymbol{X}$.
+
+Our joint optimization problem is defined as follows:
 \begin{equation}
 \begin{array}{c}
 \min_{\boldsymbol\lambda \in \mathbb{R}^2} \frac{1}{2}
@@ -834,10 +838,10 @@ is
 + \lambda_2 \boldsymbol{D}(\boldsymbol{z})^\top \boldsymbol{D}(\boldsymbol{z})
 \end{bmatrix}
 \end{equation}
-The Hessian matrix is invertible for $\lambda_2 > 0$.
+The Hessian matrix is invertible for $\lambda_2 > 0$. \textcolor{red}{Not quite! But if we add a tiny ridge penalty to $\beta$ then I think we are ok. And we are definitely OK if we add a tiny ridge penalty to both}
 \end{itemize}
 
-We now calculate the gradient of the validation loss. First, we must solve for $\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})$ from the original joint optimization problem to determine $I(\boldsymbol \lambda)$. We then define the locally equivalent joint optimization problem:
+We now calculate the gradient of the validation loss. Given $I(\boldsymbol \lambda)$, the nonzero set of $\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})$, we define the locally equivalent joint optimization problem as
 \begin{equation}
 \begin{array}{c}
 \min_{\boldsymbol\lambda \in \mathbb{R}^2} \frac{1}{2}
@@ -859,8 +863,7 @@ We now calculate the gradient of the validation loss. First, we must solve for $
 \end{array}
 \label{aplmRestricted}
 \end{equation}
-
-Since this training criterion is smooth, we can perform implicit differentiation on the gradient condition and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\eta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\theta}(\boldsymbol{\lambda}) $: 
+As before we can now characterize our solution by setting the gradient of our now-locally-smooth optimization problem to $0$. We then implicitly differentiate this gradient-based characterization and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\eta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\theta}(\boldsymbol{\lambda}) $: 
 \begin{equation*}
 \begin{array}{lcl}
 \frac{\partial}{\partial \lambda_1} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})  &=&
@@ -899,7 +902,22 @@ By the chain rule, the gradient of the validation loss is
 \bigg )
 \end{equation*}
 
-\subsection{Implementation}
+\subsection{Gradient Descent Details}
+Here we discuss choice of step size and our convergence criterion.
+
+There are many possible choices for our stepsize sequence $\{\alpha_k\}$. Popular choices for convex problems are discussed in \textcolor{red}{CITE BOYD}. We chose use a backtracking line search as discussed in \textcolor{red}{CHAPTER of CITE BOYD}. In our examples initial step size was between 0.5 and 1 and we backtrack at a rate between 0.1 and 0.01. \textcolor{red}{Maybe give details in the appendix for what this means? Or give it here, your choice!} \textcolor{blue}{Also should note what we do if our $\lambda$s try to leave the positive quadrant --- that we automatically discard those step-sizes}
+
+Our convergence criterion is based on the change in our validation loss between iterates. More specifically, we stop our algorithm when
+\[
+L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\boldsymbol{X}_V)\right) - L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k)})}(\boldsymbol{X}_V)\right) \leq \epsilon
+\]
+for some prespecified tolerance, $\epsilon$. For the results in this manuscript we use $\epsilon = BLAH$.
+
+\subsection{Accelerated Gradient Descent}
+We also use a modification of Algorithm 2, based on the work of \textcolor{red}{CITATIONS}. For smooth convex problems, these ``accelerated'' algorithms have faster worst-case convergence than gradient (while maintaining the same per-iteration complexity). In practice, these accelerated algorithms often vastly improve performance. In particular we follow the recipe of \citet{o2013adaptive} \textcolor{red}{Do they have step size optimization in there? Do we use step size optimization?}. Our algorithm is given by:\textcolor{red}{ALGORITHM GOES HERE --- be more explicit than you were below though!}
+
+\subsection{OLD SECTION}
+\textcolor{red}{leaving this for comparison, and in case you want to cannabalize bits f the algorithm for above}
 A variety of optimization techniques can be used to implement descent-based joint optimization. In this paper, we employed two methods: gradient descent and Nesterov's gradient descent with adaptive restarts.
 
 Gradient descent follows Algorithm 2 exactly. At each iteration $k$, step size $\alpha^{(k)}$ is chosen using backtracking line search. In the following examples, initial step size between 0.5 and 1 and backtrack at a rate between 0.1 and 0.01.
@@ -941,13 +959,16 @@ L \big( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\boldsy
 \end{equation}
 is lower than some threshold.
 
+
 \section{Results: validation error minimization}
 
 We ran two simulation studies for this paper. The purpose of the first set of simulations is to compare the performance and efficiency of grid-based and descent-based joint optimization across different regularization methods.
 
-Grid-based joint optimization was performed using cross validation over a grid of parameter values. Descent-based joint optimization was implemented with the two methods gradient descent and Nesterov's gradient descent with adaptive restarts.
+Grid-based joint optimization was performed using cross validation over a grid of parameter values. Descent-based joint optimization was implemented with the two methods gradient descent and accelerated gradient descent with adaptive restarts.
 
 The simulation experiments were on the example regressions elastic net, sparse group lasso, and APLM. For each experiment, 30 datasets were generated. Below, we describe the simulation settings, followed by a discussion of the results.
+
+\textcolor{red}{There should be something in here about how we fit the inner optimizations / fit the solutions at all grid-points for grid-based optimization; i.e. mention using cvxpy and whichever solver we specified in cvxpy --- you can note that other custom-tuned solvers would be faster, BUT since both methods had this disadvantage we don't expect it to influence the relative timings}
 
 \subsection{Elastic net}
 Each simulated dataset consisted of 80 training and 20 validation observations with 250 predictors. The predictors were randomly generated from a normal distribution with mean zero, variance one, and pairwise correlation between predictors $x_i$ and $x_j$ as $0.5^{|i-j|}$.
@@ -973,7 +994,7 @@ where $\beta^{(j)} = (1, 2, 3, 4, 5, 0, ..., 0)$ for $j = 1, 2, 3$ and $\epsilon
 
 Both descent-based methods were initialized at (0.01, 0.01), (1, 1), and (100, 100). Grid-based joint optimization used a $10 \times 10$ grid from 1e-5 to $\max(\{||X^{(j)T}y ||_2\}_{j=1,..., m})$.
 
-\subsection{Additive partial linear models}
+\subsection{Additive partially linear models}
 
 Each simulated dataset consisted of 100 training and 25 validation observations with 20 linear predictors and one nonlinear predictor. Linear predictors were generated such that the first two groups of three features were highly correlated and the rest of the features were generated from a standard normal distribution.
 \begin{equation}
@@ -1125,7 +1146,7 @@ Gradient Descent & 0.06 & 15.34 & 0.002 & 48.63 \\
 \label{table:unpooled}
 \end{table}
 
-\subsection{Additive partial linear models with three regularization parameters}
+\subsection{Additive partially linear models with three regularization parameters}
 We generalized the APLM criterion in \eqref{aplmProblem} by using the elastic net instead of the lasso:
 \begin{equation}
 \lambda_1 \lvert\lvert \beta \rvert \rvert_1
@@ -1183,7 +1204,7 @@ Gradient Descent & 0.41 & 4.85 & 4.08 & 54.63 \\
 \hline
 \end{tabular}
 \end{center}
-\caption {Additive Partial Linear Model}
+\caption {additive partially linear Model}
 \label{ref:aplm}
 \end{table}
 
@@ -1201,7 +1222,7 @@ Gradient Descent & 0.41 & 4.85 & 4.08 & 54.63 \\
 \section{Application to Real Data}
 In this section, we apply descent-based joint optimization to real data.
 
-We apply un-pooled sparse group lasso to the real-data application from \citet{simon2013sparse}. For comparison, we also fit the sparse group lasso model. In this problem, we are interested in finding genes from gene pathways that are driving Crohn's Disease and Ulcerative Colitis.
+We apply un-pooled sparse group lasso to the data analyzed in \citet{simon2013sparse}. For comparison, we also fit the sparse group lasso model. In this problem, we are interested in finding genes from gene pathways that are driving Crohn's Disease and Ulcerative Colitis.
 
 Our dataset is from a colitis study of 127 total patients, 85 with colitis (59 crohn's patients + 26 ulcerative colitis patients) and 42 health controls \citep{burczynski2006molecular}. Expression data was measured for 22,283 genes on affymetrix U133A microarrays. We grouped the genes according to the 326 C1 positional gene sets from MSigDb v5.0 \citep{subramanian2005gene} and discarded the 2358 genes not found in the gene set.
 
@@ -1365,7 +1386,7 @@ $
 \end{bmatrix}
 $ from top left to bottom right and $M_2$ is the diagonal matrix with $\frac{\lambda_1^{(k)}}{|| \beta^{(k)}||_2}$ from top left to bottom right.
 
-\subsubsection{Additive Partial Linear Model with three penalties}
+\subsubsection{additive partially linear Model with three penalties}
 
 To perform joint optimization, we formulate the problem as follows:
 \begin{multline}
