update math for example problems and add more instructions for implementation. fix right left

--- a/paper/hillclimbing.bib
+++ b/paper/hillclimbing.bib
@@ -91,7 +91,7 @@
   publisher={SIAM}
 }
 
-cle{donoho1994ideal,
+@article{donoho1994ideal,
   title={Ideal spatial adaptation by wavelet shrinkage},
   author={Donoho, David L and Johnstone, Jain M},
   journal={Biometrika},
@@ -135,4 +135,28 @@ cle{donoho1994ideal,
   publisher={Wiley Online Library}
 }
 
+@book{boyd2004convex,
+  title={Convex optimization},
+  author={Boyd, Stephen and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
+}
+
+@article{cvxpy,
+  author       = {Steven Diamond and Stephen Boyd},
+  title        = {{CVXPY}: A {P}ython-Embedded Modeling Language for Convex Optimization},
+  journal      = {Journal of Machine Learning Research},
+  note         = {To appear},
+  url          = {http://stanford.edu/~boyd/papers/pdf/cvxpy_paper.pdf},
+  year         = {2016},
+}
+
+@inproceedings{nesterov1983method,
+  title={A method of solving a convex programming problem with convergence rate O (1/k2)},
+  author={Nesterov, Yurii},
+  year={1983},
+  pages={372-376},
+  publisher={Soviet Mathematics Doklady},
+  volume={27}
+}
 
