fix noah comments

--- a/paper/hillclimbing.bib
+++ b/paper/hillclimbing.bib
@@ -160,3 +160,15 @@
   volume={27}
 }
 
+@article{donoho1995noising,
+  title={De-noising by soft-thresholding},
+  author={Donoho, David L},
+  journal={Information Theory, IEEE Transactions on},
+  volume={41},
+  number={3},
+  pages={613--627},
+  year={1995},
+  publisher={IEEE}
+}
+
+
