--- a/paper/hillclimbing.tex
+++ b/paper/hillclimbing.tex
@@ -118,7 +118,7 @@ In recent years, there has been much interest in combining regularization method
 \end{equation}
 where $\{P_i\}_{i=1, ..., J}$ are the penalty functions, and $\{\lambda_i\}_{i=1, ..., J}$ are the regularization parameters.
 
-Regularization parameters control the degree of various facets of model complexity (e.g. amount of sparsity or smoothness). Often, the goal is to set the parameters to minimize the fitted model's generalization error. One usually estimates this using a training/validation approach (or cross-validation). There one fits a model on a training set $(X_T, \boldsymbol y_T)$ and measures the model's error on a validation set $(X_V, \boldsymbol y_V)$. The goal then is to choose penalty parameters, $\lambda_1, \ldots, \lambda_J$, that minimize the validation error, as formulated in the following optimization problem:
+Regularization parameters control the degree of various facets of model complexity (e.g. amount of sparsity or smoothness). Often, the goal is to set the parameters to minimize the fitted model's generalization error. One usually estimates this using a training/validation approach (or cross validation). There one fits a model on a training set $(X_T, \boldsymbol y_T)$ and measures the model's error on a validation set $(X_V, \boldsymbol y_V)$. The goal then is to choose penalty parameters, $\lambda_1, \ldots, \lambda_J$, that minimize the validation error, as formulated in the following optimization problem:
 \begin{equation}
 \begin{array}{c}
 \min_{\boldsymbol{\lambda} \in \Lambda} L(\boldsymbol{y}_V, \hat f (\boldsymbol{X}_V | \boldsymbol{\lambda})) \\
@@ -380,22 +380,22 @@ where
 \label{thethrm}
 \end{theorem}
 
-We can therefore construct a gradient descent procedure based on the model parameter constraint in \eqref{restrictedmodelparams}. At each iteration, let matrix $U^{(k)}$ have orthonormal columns spanning the differentiable space $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}(\hat \theta(\boldsymbol{\lambda}))$. Since this space is also a local optimality space, it is sufficient to minimize the training criterion over the column span of $U^{(k)}$. We then reformulate the joint optimization problem by parameterizing the model parameters $\hat \theta(\boldsymbol{\lambda})$ as $U^{(k)} \hat \beta(\boldsymbol{\lambda})$:
+We can therefore construct a gradient descent procedure based on the model parameter constraint in \eqref{restrictedmodelparams}. At each iteration, let matrix $U$ have orthonormal columns spanning the differentiable space $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}(\hat \theta(\boldsymbol{\lambda}))$. Since this space is also a local optimality space, it is sufficient to minimize the training criterion over the column span of $U$. We then reformulate the joint optimization problem by parameterizing the model parameters $\hat \theta(\boldsymbol{\lambda})$ as $U \hat \beta(\boldsymbol{\lambda})$:
 \begin{equation}
 \begin{array}{c}
 \min_{\boldsymbol \lambda \in \mathbb{R}_{+}^{J}} L(y_V, f_{U^{(k)} \hat{\boldsymbol \beta} (\boldsymbol \lambda) }(X_V)) \\
 \text{where } \hat{\boldsymbol \beta} (\boldsymbol \lambda) =
 \argmin_{\boldsymbol \beta}
 L(y_T, f_{U^{(k)} \boldsymbol \beta}(X_T))
-+ \sum\limits_{i=1}^J \lambda_i P_i( U^{(k)} \boldsymbol \beta)
++ \sum\limits_{i=1}^J \lambda_i P_i( U \boldsymbol \beta)
 \end{array}
 \end{equation}
 
 This locally equivalent problem now reduces to the simple case where the training criterion is smooth. As mentioned previously, implicit differentiation on the gradient condition then gives us $\frac{\partial}{\partial \boldsymbol \lambda}\hat{\boldsymbol \beta}(\boldsymbol \lambda)$, which gives us the value of interest
 \begin{equation}
-\frac{\partial}{\partial \boldsymbol \lambda}\hat{\boldsymbol \theta}(\boldsymbol \lambda) = U^{(k)} \frac{\partial}{\partial \boldsymbol \lambda}\hat{\boldsymbol \beta}(\boldsymbol \lambda)
+\frac{\partial}{\partial \boldsymbol \lambda}\hat{\boldsymbol \theta}(\boldsymbol \lambda) = U \frac{\partial}{\partial \boldsymbol \lambda}\hat{\boldsymbol \beta}(\boldsymbol \lambda)
 \end{equation}
-Note that because the differentiable space is a local optimality space and is thus locally constant, we can treat $U^{(k)}$ as a constant in the gradient derivations. In Algorithm~\ref{alg:gradDescent}, we give the descent procedure in more detail.
+Note that because the differentiable space is a local optimality space and is thus locally constant, we can treat $U$ as a constant in the gradient derivations. In Algorithm~\ref{alg:gradDescent}, we give the descent procedure in more detail.
 
 \begin{algorithm}
 \caption{Joint Optimization with Gradient Descent}
@@ -471,6 +471,16 @@ Note that because the differentiable space is a local optimality space and is th
 	\ENDFOR
   \end{algorithmic}
 \end{algorithm}
+
+To perform joint optimization for full $K$-fold cross validation, the objective simply become the average validation cost across all $K$ folds. Let $(\boldsymbol y, \boldsymbol{X})$ be the full data set. We denote the $k$th fold as $(\boldsymbol y_{k}, \boldsymbol{X}_{k})$ and its complement as $(\boldsymbol y_{-k}, \boldsymbol{X}_{-k})$. The joint optimization problem then becomes
+
+\begin{equation}
+\begin{array}{c}
+\argmin_{\boldsymbol{\lambda} \in \mathbb{R}^J_{+}} \frac{1}{K} \sum_{k=1}^K L(\boldsymbol{y}_{k}, f_{\hat{\theta}^{(k)}(\boldsymbol{\lambda})}(\boldsymbol{X}_k)) \\
+\text{where } {\hat{\theta}^{(k)}(\boldsymbol{\lambda})} = \argmin_{\theta \in \Theta} L(\boldsymbol{y}_{-k}, f_\theta (\boldsymbol{X}_{-k})) + \sum\limits_{i=1}^J \lambda_i P_i(\theta) \text{ for } k=1,...,K
+\end{array}
+\label{jointoptFullCV}
+\end{equation}
 
 \subsection{Examples}
 
@@ -741,7 +751,7 @@ sgn(\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}))
 
 
 \subsubsection{Generalized Lasso}
-The generalized lasso \citep{roth2004generalized} penalizes the $\ell_1$ norm of the coefficients $\boldsymbol \theta$ weighted by some matrix $D$. Depending on the choice of $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing \citep{tibshirani2005sparsity}, \citep{kim2009ell_1}, \textcolor{red}{who to cite? A Donoho paper?}.
+The generalized lasso \citep{roth2004generalized} penalizes the $\ell_1$ norm of the coefficients $\boldsymbol \theta$ weighted by some matrix $D$. Depending on the choice of $D$, the generalized lasso induces different structural constraints on the regression coefficients. Special cases include the fused lasso, trend filtering, and wavelet smoothing \citep{tibshirani2005sparsity}, \citep{kim2009ell_1}, \citep{donoho1994ideal}.
 
 To tune the regularization parameter $\lambda$, we formulate the generalized lasso as a joint optimization problem:
 
@@ -763,10 +773,7 @@ Let $I_{I(\lambda)}$ be the submatrix of the $p \times p$ identity matrix consis
 \begin{equation}
 S_\lambda = \mathcal{N}(I_{I(\lambda)}^\top D)
 \end{equation}
-Let $U_\lambda$ be an orthonormal basis for $\mathcal{N}(I_{I(\lambda)}^\top D)$. Note
-\begin{equation}
-I - D^\top I_{I(\lambda)} \left ( D^\top D\right )^{-1} I_{I(\lambda)}^\top D = U_\lambda U_\lambda^\top. \textrm{\textcolor{red}{Is $D^\top D$ necessarily invertible? Do we need this?}}
-\end{equation}
+Let $U_\lambda$ be an orthonormal basis for $\mathcal{N}(I_{I(\lambda)}^\top D)$.
 
 The first two conditions in Theorem~\ref{thethrm} are satisfied by similar reasoning to that discussed in Section~\ref{sec:enet}. For the third condition, we need to check that the Hessian matrix is invertible.
 \begin{itemize}
@@ -1005,103 +1012,13 @@ L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\bolds
 for some prespecified tolerance, $\delta$. For the results in this manuscript we use $\epsilon = 1e$-5.
 
 \subsection{Accelerated Gradient Descent}
-We also use a modification of Algorithm~\ref{alg:gradDescent}, based on the work of \citet{nesterov1983method}. For smooth convex problems, these ``accelerated'' algorithms have faster worst-case convergence than gradient (while maintaining the same per-iteration complexity). In practice, these accelerated algorithms often vastly improve performance. In particular we follow the recipe from \citet{o2013adaptive} which performs adaptive restarts whenever the function value increases. As before, we choose step size using backtracking. We present the exact details in Algorithm~\ref{alg:accGradDescent}.
-
-\begin{algorithm}
-\caption{Joint Optimization with Accelerated Gradient Descent and Adaptive Restarts}
-\label{alg:accGradDescent}
-\begin{algorithmic}
-	\STATE{
-	        Initialize $\boldsymbol{\lambda}^{(0)}$.
-	}
-        \WHILE{stopping criteria is not reached}
-	\FOR{each iteration $k=0,1,...$}
-              	\STATE{
-              		Solve for $\hat \theta(\boldsymbol{\lambda}^{(k)}) = \argmin_{\theta \in \mathbb{R}^p} L_T(\theta, \boldsymbol{\lambda}^{(k)})$.
-		}
-              
-		\STATE{
-			Construct matrix $U^{(k)}$, an orthonormal basis of $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}\left (\hat{\theta}\left(\boldsymbol{\lambda}^{(k)}\right) \right )$.
-		}
-              	\STATE{
-			Define the locally equivalent joint optimization problem
-                \begin{equation}
-                \begin{array}{c}
-                \min_{\boldsymbol \lambda} L(y_V, f_{U^{(k)} \hat{\boldsymbol \beta} (\boldsymbol \lambda) }(X_V)) \\
-                \text{where } \hat{\boldsymbol \beta} (\boldsymbol \lambda) =
-                \argmin_{\boldsymbol \beta}
-                L(y_T, f_{U^{(k)} \boldsymbol \beta}(X_T))
-                + \sum\limits_{i=1}^J \lambda_i P_i( U^{(k)} \boldsymbol \beta)
-                \end{array}
-                \end{equation}
-              	}
-              	\STATE{
-			Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\beta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
-              \begin{equation}
-	      \frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})
-		= - \left [ \left .
-		_{U^{(k)}}\nabla^2 \left (
-			 L(\boldsymbol{y}_T, f_{U^{(k)}\boldsymbol \beta} (\boldsymbol{X}_T))  + 
-			 \sum\limits_{i=1}^J \lambda_i P_i(U^{(k)}\boldsymbol \beta)
-		\right )
-		\right |_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
-		\right ]^{-1}
-		\left [
-		_{U^{(k)}}\nabla P(U^{(k)}\boldsymbol \beta)
-		|_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}		\right ]
-              \end{equation}
-              with $_{U^{(k)}}\nabla^2$ and $_{U^{(k)}}\nabla$ are as defined in \eqref{eq:hess}.
-              	}
-              	\STATE{
-			Calculate the gradient $\nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) |_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
-              	\begin{equation}
-              	\nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) =
-		\left [
-	  	U^{(k)}
-		\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})
-		\right ]^\top
-		\left [ \left .
-		_{U^{(k)}}\nabla L(\boldsymbol{y_V}, f_{U^{(k)}\boldsymbol \beta}(\boldsymbol{X_V}))
-               	\right |_{\boldsymbol \beta = \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
-		\right ]
-              	\end{equation}
-		}
-		\STATE{
-			Perform Neterov's update with step size $t^{(k)}$:
-              \begin{equation}
-                \begin{array}{lcl}
-                \boldsymbol{\eta} & := &
-                 \boldsymbol{\lambda}^{(k)} + \frac{k-1}{k+2} \left( \boldsymbol{\lambda}^{(k)} - \boldsymbol{\lambda}^{(k-1)} \right ) \\
-                \boldsymbol{\lambda}^{(k+1)} & := &
-                \boldsymbol{\eta}
-                - t^{(k)} \left .
-                \nabla_{\boldsymbol{\lambda}} L \left (\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V}) \right)
-                \right |_{\boldsymbol{\lambda} = \boldsymbol{\eta}} 
-                \end{array}
-                \label{nesterovUpdates}
-                \end{equation}
-                }
-          	\IF{the stopping criteria is reached or
-          \begin{equation}
-          L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\boldsymbol{X}_V) \right )>
-          L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k)})}(\boldsymbol{X}_V) \right ),
-          \end{equation}
-          	}
-			\STATE{
-			          set $\boldsymbol{\lambda}^{(0)} := \boldsymbol{\lambda}^{(k)}$ and break
-                  	}
-		\ENDIF
-	\ENDFOR
-	\ENDWHILE
-	\RETURN{$\boldsymbol{\lambda}^{(0)}$ and $\hat{\boldsymbol \theta}(\boldsymbol{\lambda}^{(0)})$}
-\end{algorithmic}
-\end{algorithm}
+We also use a modification of Algorithm~\ref{alg:gradDescent}, based on the work of \citet{nesterov1983method}. For smooth convex problems, these ``accelerated'' algorithms have faster worst-case convergence than gradient (while maintaining the same per-iteration complexity). In practice, these accelerated algorithms often vastly improve performance. In particular we follow the recipe from \citet{o2013adaptive} which performs adaptive restarts whenever the function value increases. As before, we choose step size using backtracking. We present the exact details in Algorithm~\ref{alg:accGradDescent} included in the Appendix.
 
 \section{Results: validation error minimization}
 
 We ran two simulation studies for this paper. The purpose of the first set of simulations is to compare the performance and efficiency of grid-based and descent-based joint optimization across different regularization methods.
 
-Grid-based joint optimization was performed using cross validation over a grid of parameter values. Descent-based joint optimization was implemented with the two methods gradient descent and accelerated gradient descent with adaptive restarts. \textcolor{red}{Did we use cross-validation for descent-based method? We probably should if we are comparing to CV for grid; and then we should probably discuss it somewhere, maybe in an appendix?}
+For the simulation studies in this paper, we use a training/validation split to tune the parameters. Grid-based joint optimization was performed over a grid of parameter values. Descent-based joint optimization was implemented with the two methods gradient descent and accelerated gradient descent with adaptive restarts.
 
 We ran simulation experiments for the elastic net, sparse group lasso, and APLM. For each experiment, 30 datasets were generated. Below, we describe the simulation settings, followed by a discussion of the results.
 
@@ -1121,7 +1038,7 @@ and $\epsilon \sim N(0, 1)$. $\sigma$ was chosen such that the signal to noise r
 
 Both descent-based methods were initialized at (0.01, 0.01) and (10, 10). Grid-based joint optimization used a $10 \times 10$ grid from 1e-5 to four times the largest eigenvalue of $X_T^\top X_T$.
 
-\subsection{Sparse group lasso}
+\subsection{Sparse group lasso}\label{sec:simulationSGL}
 
 Each simulated dataset consisted of 60 training and 15 validation observations with 1500 covariates. The predictors $X$ were generated from a standard normal distribution. The response $y$ was constructed as
 \begin{equation}
@@ -1131,7 +1048,7 @@ where $\beta^{(j)} = (1, 2, 3, 4, 5, 0, ..., 0)$ for $j = 1, 2, 3$ and $\epsilon
 
 Both descent-based methods were initialized at (0.01, 0.01), (1, 1), and (100, 100). Grid-based joint optimization used a $10 \times 10$ grid from 1e-5 to $\max(\{||X^{(j)T}y ||_2\}_{j=1,..., m})$.
 
-\subsection{Additive partially linear models}
+\subsection{Additive partially linear models}\label{sec:simulationAPLM}
 
 Each simulated dataset consisted of 100 training and 25 validation observations with 20 linear predictors and one nonlinear predictor. Linear predictors were generated such that the first two groups of three features were highly correlated and the rest of the features were generated from a standard normal distribution.
 \begin{equation}
@@ -1222,7 +1139,7 @@ In this second simulation study, we test descent-based joint optimization on reg
 
 We experiment with generalizations of the simple regressions from the previous section. That is, for the sparse group lasso, we tried an ``unpooled" version in each covariate group is allowed its own regularization parameter. For the APLM example, we added ridge penalty as a third regularization term. Details regarding the joint optimization problem formulations and gradient derivations for these generalized regression models are located in the Appendix.
 
-We used gradient descent to tune the parameters for these more complex regularization methods. For baseline comparison, we also tuned \textcolor{red}{(also using gradient descent?)} the parameters for the original two-parameter regressions. Finally, we compared the accuracy of the models on a separate test set. The results show that gradient descent produced model fits for the generalized regressions that achieved lower test error. In addition, it remained computationally tractable, even in cases with over a hundred regularization parameters.
+We used gradient descent to tune the parameters for these more complex regularization methods. For baseline comparison, we tuned the parameters for the original two-parameter regressions using grid-based joint optimization. Finally, we compared the accuracy of the models on a separate test set. The results show that gradient descent produced model fits for the generalized regressions that achieved lower test error. In addition, it remained computationally tractable, even in cases with over a hundred regularization parameters.
 
 \subsection{Unpooled sparse group lasso}
 
@@ -1238,7 +1155,7 @@ In unpooled sparse group lasso, the group lasso penalty parameter $\lambda_1$ is
 \end{equation}
 The number of regularization parameters in \eqref{unpooledSGL} is then $M+1$. This generalized criterion gives models the additional flexibility of having different thresholds for setting covariate and covariate group effects to zero. Therefore, unpooled sparse group lasso can potentially better model covariate groups with very different distributions.
 
-We ran three experiments with different numbers of covariate groups $m$ and total covariates $p$, as given in Table \ref{table:unpooled}. The simulation settings were similar to the previous sparse group lasso simulation study. We used the same grid for grid-based joint optimization. For gradient descent, the $m+1$ regularization parameters were initialized at $1e\text{-}4 \times \boldsymbol 1^\top$, $1e\text{-}3 \times \boldsymbol 1^\top$, and $1e\text{-}2 \times \boldsymbol 1^\top$.
+We ran three experiments with different numbers of covariate groups $m$ and total covariates $p$, as given in Table \ref{table:unpooled}. The simulation settings were similar to the simulation settings in Section \ref{sec:simulationSGL}. We used the same grid for grid-based joint optimization. For gradient descent, the $m+1$ regularization parameters were initialized at $1e\text{-}4 \times \boldsymbol 1^\top$, $1e\text{-}3 \times \boldsymbol 1^\top$, and $1e\text{-}2 \times \boldsymbol 1^\top$.
 
 We measured three metrics to assess model performance: test error, $\beta$ error, which is defined as $\lvert \lvert \beta - \hat \beta \|_2 ^2$, and the percentage of nonzero coefficients correctly identified among all the true nonzero coefficients. The results show that unpooled sparse group lasso tuned using gradient descent performed better by all three metrics. Furthermore, gradient descent was significantly faster in all settings. The runtimes show that gradient descent does not grow with the number of regularization parameters.
 
@@ -1299,7 +1216,7 @@ We generalized the APLM criterion in \eqref{aplmProblem} by using the elastic ne
 + \frac{1}{2} \lambda_3 \| D^{(2)} \boldsymbol \theta \|_2^2
 + \frac{1}{2} \epsilon \| \boldsymbol{\theta} \|_2^2
 \end{equation}
-We ran experiments on three nonlinear functions of varying levels of smoothness as given in Table \ref{ref:aplm}. The simulation settings were similar to before \textcolor{red}{cite a table or section for ``before''}. The only difference was that gradient descent was initialized at $10^i \times \boldsymbol 1^\top$ for $i=-4, ..., 1$. \textcolor{red}{Is this a 3d or 2d grid search?}
+We ran experiments on three nonlinear functions of varying levels of smoothness as given in Table \ref{ref:aplm}. The simulation settings were similar to those in Section \ref{sec:simulationAPLM}. The only difference was that gradient descent was initialized at $10^i \times \boldsymbol 1_3^\top$ for $i=-4, ..., 1$.
 
 Models were judged by their accuracy on the test set. In addition, we measured the error in the fitted linear model and nonparametric estimates with $\beta$ error=$||\beta - \hat \beta||_2^2$ and $\theta$ error=$|| g(z) - \theta ||_2^2$, respectively.
 
@@ -1370,7 +1287,7 @@ We apply un-pooled sparse group lasso to the data analyzed in \citet{simon2013sp
 
 Our dataset is from a colitis study of 127 total patients, 85 with colitis (59 crohn's patients + 26 ulcerative colitis patients) and 42 health controls \citep{burczynski2006molecular}. Expression data was measured for 22,283 genes on affymetrix U133A microarrays. We grouped the genes according to the 326 C1 positional gene sets from MSigDb v5.0 \citep{subramanian2005gene} and discarded the 2358 genes not found in the gene set.
 
-For each experiment, we randomly shuffled the data and used the first 50 observations for the training set and the remaining 77 for the test set. The experiment was repeated 10 times. 5-fold cross-validation was used to fit models. The penalty parameters in un-pooled sparse group lasso were initialized at $0.5 \times \boldsymbol 1^\top$. For sparse group lasso, models were fit over a $5 \times 5$ grid of parameter values from 1e-4 to 5.
+For each experiment, we randomly shuffled the data and used the first 50 observations for the training set and the remaining 77 for the test set. The experiment was repeated 10 times. 5-fold cross validation was used to fit models. The penalty parameters in un-pooled sparse group lasso were initialized at $0.5 \times \boldsymbol 1^\top$. For sparse group lasso, models were fit over a $5 \times 5$ grid of parameter values from 1e-4 to 5.
 
 As shown in Table \ref{colitis}, un-pooled sparse group lasso achieved a slightly higher classification rate compared to sparse group lasso. Interestingly, un-pooled sparse group lasso finds solutions that are significantly more sparse than sparse group lasso -- on average, 9 genesets were identified, as opposed to 38. In addition, the number of genesets identified by un-pooled sparse group lasso has significantly lower variance. The number of genesets identified by sparse group lasso ranged from 2 to 73, whereas the number of genesets identified by un-pooled sparse group lasso ranged from 8 to 12. These results suggest that un-pooling the penalty parameters in sparse group lasso could potentially improve interpretability and stability.
 
@@ -1694,8 +1611,98 @@ Let the criterion function be $L:\mathbb{R}^n \rightarrow \mathbb{R}$, the curre
 	\end{algorithmic}
 \end{algorithm}
 
+\subsection{Joint Optimization with Accelerated Gradient Descent and Adaptive Restarts}
 
-\section*{Acknowledgments}
+\begin{algorithm}[H]
+\caption{Joint Optimization with Accelerated Gradient Descent and Adaptive Restarts}
+\label{alg:accGradDescent}
+\begin{algorithmic}
+	\STATE{
+	        Initialize $\boldsymbol{\lambda}^{(0)}$.
+	}
+        \WHILE{stopping criteria is not reached}
+	\FOR{each iteration $k=0,1,...$}
+              	\STATE{
+              		Solve for $\hat \theta(\boldsymbol{\lambda}^{(k)}) = \argmin_{\theta \in \mathbb{R}^p} L_T(\theta, \boldsymbol{\lambda}^{(k)})$.
+		}
+              
+		\STATE{
+			Construct matrix $U^{(k)}$, an orthonormal basis of $\Omega^{L_T(\cdot, \boldsymbol{\lambda})}\left (\hat{\theta}\left(\boldsymbol{\lambda}^{(k)}\right) \right )$.
+		}
+              	\STATE{
+			Define the locally equivalent joint optimization problem
+                \begin{equation}
+                \begin{array}{c}
+                \min_{\boldsymbol \lambda} L(y_V, f_{U^{(k)} \hat{\boldsymbol \beta} (\boldsymbol \lambda) }(X_V)) \\
+                \text{where } \hat{\boldsymbol \beta} (\boldsymbol \lambda) =
+                \argmin_{\boldsymbol \beta}
+                L(y_T, f_{U^{(k)} \boldsymbol \beta}(X_T))
+                + \sum\limits_{i=1}^J \lambda_i P_i( U^{(k)} \boldsymbol \beta)
+                \end{array}
+                \end{equation}
+              	}
+              	\STATE{
+			Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\beta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
+              \begin{equation}
+	      \frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})
+		= - \left [ \left .
+		_{U^{(k)}}\nabla^2 \left (
+			 L(\boldsymbol{y}_T, f_{U^{(k)}\boldsymbol \beta} (\boldsymbol{X}_T))  + 
+			 \sum\limits_{i=1}^J \lambda_i P_i(U^{(k)}\boldsymbol \beta)
+		\right )
+		\right |_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
+		\right ]^{-1}
+		\left [
+		_{U^{(k)}}\nabla P(U^{(k)}\boldsymbol \beta)
+		|_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}		\right ]
+              \end{equation}
+              with $_{U^{(k)}}\nabla^2$ and $_{U^{(k)}}\nabla$ are as defined in \eqref{eq:hess}.
+              	}
+              	\STATE{
+			Calculate the gradient $\nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) |_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where
+              	\begin{equation}
+              	\nabla_{\boldsymbol{\lambda}} L(\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V})) =
+		\left [
+	  	U^{(k)}
+		\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})
+		\right ]^\top
+		\left [ \left .
+		_{U^{(k)}}\nabla L(\boldsymbol{y_V}, f_{U^{(k)}\boldsymbol \beta}(\boldsymbol{X_V}))
+               	\right |_{\boldsymbol \beta = \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
+		\right ]
+              	\end{equation}
+		}
+		\STATE{
+			Perform Neterov's update with step size $t^{(k)}$:
+              \begin{equation}
+                \begin{array}{lcl}
+                \boldsymbol{\eta} & := &
+                 \boldsymbol{\lambda}^{(k)} + \frac{k-1}{k+2} \left( \boldsymbol{\lambda}^{(k)} - \boldsymbol{\lambda}^{(k-1)} \right ) \\
+                \boldsymbol{\lambda}^{(k+1)} & := &
+                \boldsymbol{\eta}
+                - t^{(k)} \left .
+                \nabla_{\boldsymbol{\lambda}} L \left (\boldsymbol{y_V}, f_{\hat \theta(\boldsymbol{\lambda})}(\boldsymbol{X_V}) \right)
+                \right |_{\boldsymbol{\lambda} = \boldsymbol{\eta}} 
+                \end{array}
+                \label{nesterovUpdates}
+                \end{equation}
+                }
+          	\IF{the stopping criteria is reached or
+          \begin{equation}
+          L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k+1)})}(\boldsymbol{X}_V) \right )>
+          L \left( \boldsymbol{y}_V, f_{\hat{\theta}(\boldsymbol{\lambda}^{(k)})}(\boldsymbol{X}_V) \right ),
+          \end{equation}
+          	}
+			\STATE{
+			          set $\boldsymbol{\lambda}^{(0)} := \boldsymbol{\lambda}^{(k)}$ and break
+                  	}
+		\ENDIF
+	\ENDFOR
+	\ENDWHILE
+	\RETURN{$\boldsymbol{\lambda}^{(0)}$ and $\hat{\boldsymbol \theta}(\boldsymbol{\lambda}^{(0)})$}
+\end{algorithmic}
+\end{algorithm}
+
 
 
 \bibliographystyle{abbrvnat}
